--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -188,12 +188,12 @@
                     <h1>
                       The Latest
                       <span>
-                        Furniture
+                        !!Furniture!!
                       </span>
                     </h1>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                      do eiusmod tempor incididunt ut labore
+                      Hello world!
+                      Nice to meet you
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1">
