--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -124,14 +124,13 @@
                 <div class="col-md-6">
                   <div class="detail-box">
                     <h1>
-                      The Latest
+                      First
                       <span>
-                        Furniture
+                        1st
                       </span>
                     </h1>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                      do eiusmod tempor incididunt ut labore
+                      Anything you can do
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1">
@@ -155,14 +154,13 @@
                 <div class="col-md-6">
                   <div class="detail-box">
                     <h1>
-                      The Latest
+                      Second
                       <span>
-                        Furniture
+                        2nd
                       </span>
                     </h1>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                      do eiusmod tempor incididunt ut labore
+                      I can do better
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1">
@@ -186,14 +184,13 @@
                 <div class="col-md-6">
                   <div class="detail-box">
                     <h1>
-                      The Latest
+                      Third
                       <span>
-                        !!Furniture!!
+                        3rd
                       </span>
                     </h1>
                     <p>
-                      Hello world!
-                      Nice to meet you
+                      Anything you can do
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1">
@@ -217,14 +214,13 @@
                 <div class="col-md-6">
                   <div class="detail-box">
                     <h1>
-                      The Latest
+                      Fourth
                       <span>
-                        Furniture
+                        4th
                       </span>
                     </h1>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                      do eiusmod tempor incididunt ut labore
+                      I can do to
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1">
