--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -220,7 +220,7 @@
                       </span>
                     </h1>
                     <p>
-                      I can do to
+                      I can do too
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1">
