--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Digitf</title>
+  <title>Undertale</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -124,13 +124,13 @@
                 <div class="col-md-6">
                   <div class="detail-box">
                     <h1>
-                      First
+                      1st
                       <span>
-                        1st
+                        First
                       </span>
                     </h1>
                     <p>
-                      Anything you can do
+                      Ruins with Toriel
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1">
@@ -154,13 +154,13 @@
                 <div class="col-md-6">
                   <div class="detail-box">
                     <h1>
-                      Second
+                      2nd
                       <span>
-                        2nd
+                        Second
                       </span>
                     </h1>
                     <p>
-                      I can do better
+                      Waterfall with Sans
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1">
@@ -184,13 +184,13 @@
                 <div class="col-md-6">
                   <div class="detail-box">
                     <h1>
-                      Third
+                      3rd
                       <span>
-                        3rd
+                        Third
                       </span>
                     </h1>
                     <p>
-                      Anything you can do
+                      Snowden with...
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1">
@@ -214,13 +214,13 @@
                 <div class="col-md-6">
                   <div class="detail-box">
                     <h1>
-                      Fourth
+                      4th
                       <span>
-                        4th
+                        Forth
                       </span>
                     </h1>
                     <p>
-                      I can do too
+                      Upper world
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1">
