--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -222,11 +222,11 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                Best Experinced Freelancer Here
+                Look at me
               </h2>
             </div>
             <p>
-              It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
+              Yay! The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
             </p>
             <div class="btn-box">
               <a href="" class="btn-1">
