--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -110,7 +110,7 @@
                   <div class="detail-box">
                     <h1>
                       You Can <br>
-                      Hire Freelancer <br>
+                      Hire Me <br>
                       Here
                     </h1>
                     <p>
