--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -141,8 +141,8 @@
                 <div class="col-md-5 offset-md-1">
                   <div class="detail-box">
                     <h1>
-                      You Can <br>
-                      Hire Freelancer <br>
+                      I Can <br>
+                      Hire You <br>
                       Here
                     </h1>
                     <p>
